tests/baselines/reference/computedPropertyNames48_ES5.errors.txt
computedPropertyNames48_ES5.ts(16,6): error TS2869: Truthiness test of this kind of expression appears unintentional


==== computedPropertyNames48_ES5.ts (1 errors) ====
    declare function extractIndexer<T>(p: { [n: number]: T }): T;
    
    enum E { x }
    
    var a: any;
    
    extractIndexer({
        [a]: ""
    }); // Should return string
    
    extractIndexer({
        [E.x]: ""
    }); // Should return string
    
    extractIndexer({
        ["" || 0]: ""
         ~~
!!! error TS2869: Truthiness test of this kind of expression appears unintentional
    }); // Should return any (widened form of undefined)